[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.13"
tungstenite = "0.17"
serde_json = "1.0"
shared = { path = "../shared" }
glam = { version = "0.14", features = ["scalar-math","serde"] }
log = "0.4"
pretty_env_logger = "0.4"